update: changed brand name and logo in title bar :sparkles:

--- a/src/index.css
+++ b/src/index.css
@@ -748,11 +748,12 @@ input[type="submit"]:hover {
   .brand-logo {
     margin: 0 39rem;
   }
-
+  
   .brand-logo-img {
     /* animation-delay: 5s;
     max-width: 20.5rem; */
     height: 12rem;
+    border: thin black;
   }
 
   .hero-container-banner {
